@@ -1,5 +1,5 @@
 Hooks – Filters
-Currently available: 87
+Currently available: 88
 
 There are many filter hooks available for use with Opus Primus.
 The naming convention follows this general guideline: opus-< relevant text description >
@@ -63,6 +63,7 @@ The filters are listed below by file, in order of appearance:
         opus_exif_shutter
         opus_exif_timestamp
         opus_exif_title
+        opus_featured_thumbnail_single_view_portrait
 	includes\class.OpusPrimusNavigation.php
 		opus_image_link_navigation_output
 		opus_navigation_pagination
@@ -108,5 +109,5 @@ The filters are listed below by file, in order of appearance:
         opus_tagline_output_’ . $post->ID
         opus_taglines_text_field_description
 
-Last revised February 7, 2015
+Last revised Rare Disease Day, 2015
 * currently unavailable
