@@ -18,6 +18,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added `h5.comments-link` definition to provide a better aesthetic location
 
 = Miscellaneous =
+* Added `opus_featured_thumbnail_single_view_portrait` filter hook and updated `hooks-filters.txt`
 * Begin removal of extraneous end of structure comments ...
 * Inline documentation clean-up and re-organization
 * Updated `hooks-filters.txt` file
